--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     background: black;
     color: white;
+    scroll-behavior: smooth;
 }
 .navbar{
    margin-top: 10px;
@@ -18,7 +19,7 @@
     text-align: center;
     justify-content: center;
     font-family: 'Dancing Script', cursive;
-    padding: 50px;
+    padding: 100px;
     /* font-family: 'Passions Conflict', cursive; */
 
 }
@@ -31,14 +32,29 @@
     margin: 5px;
 }
 .navbar>a:hover{
-    box-shadow: 5px 10px red;
+    box-shadow: 5px 10px lightblue;
 }
+.navbar>a:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 @media screen and (max-width:900px) {
     .navbar{
         flex-direction: column;
     }
     .navbar>a{
         width:50%;
+    }
+    .showcase{
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+    }
+    .showcase2{
+        flex-direction: column-reverse;
+        width: 100%;
+        height: auto;
     }
 }
 #main{
@@ -48,18 +64,49 @@
 }
 
 .homepage {
-    /* The image used */
     width: 100%;
     height: 90vh;
-    background-image: url("images/BG8.jpeg");
+    background-image: url("images/BG1.jpeg");
     background-size: cover; 
-    /* Set a specific height */
+
     justify-content: center;
     align-items: center;
     display: flex;
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
+.heading
+{
+    text-align: center;
+    text-decoration: underline;
+    font-family: 'Rubik Dirt', cursive;
+    opacity: 50%;
+    font-size: 4rem;
+}
+.showcase,.showcase2{
+    display: flex;
+    margin-top: 5%;
+    justify-content: center;
+}
+.column{
+    flex:50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 2rem;
+  text-align: center;
+  font-family: 'Stalinist One', cursive;
+}
+.column>p{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+}
+.column>a{
+    text-decoration: underline;
+    color: bisque;
+    font-size: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
