--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
 *{
     box-sizing: border-box;
-    background-color: black;
+    /* background-color: black; */
     color: white;
     scroll-behavior: smooth;
+    /*  */
+}
+body{
+    background-color: black;
+    overflow-x: hidden;
 }
 .navbar{
    margin-top: 10px;
@@ -20,12 +25,14 @@
     justify-content: center;
     font-family: 'Dancing Script', cursive;
     padding: 100px;
+    transition: 0.5s;
+    background-color: black;
     /* font-family: 'Passions Conflict', cursive; */
 
 }
 .homepage>div:hover{
-    background:transparent;
-    border: 10px solid  black;
+    color: black;
+    background: white;
 
 }
 .navbar>a{
@@ -73,7 +80,8 @@
     font-family: 'Rubik Dirt', cursive;
     opacity: 50%;
     font-size: 4rem;
-    margin-top: 200px;
+    margin-top: 100px;
+    background: none;
 }
 .showcase,.showcase2,.abtbox{
     display: flex;
@@ -82,12 +90,12 @@
     
 }
 
-.column{
+.column,.column1{
     flex:50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
-  padding: 20px;
+  padding: 50px;
   font-size: 2rem;
   text-align: center;
   font-family: 'Stalinist One', cursive;
@@ -97,10 +105,17 @@
     font-size: 1rem;
 }
 .column>a{
-    text-decoration: underline;
+    text-decoration: none;
     color: bisque;
     font-size: 1rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px;
+    border-radius: 10px 5px 10px 5px;
+    border: 1px solid  white;
+}
+.column>a:hover{
+    color: black;
+    background: white;
 }
 .imgstack,.abttext{
     height: 50vh;
@@ -111,6 +126,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    background: none;
 }
 .imgstack>img{
     max-width: 60%;
@@ -128,10 +144,37 @@
 .abttext{
     width:60%;
     font-size: 2rem;
+    margin-top: 100px;
+    background: none;
 }
 .foreground{
-    background:none;
+    
     transition: 0.5s;
+}
+
+.skillbox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    /* align-items: center; */
+    margin-top: 10%;
+    /* padding: 10px; */
+    margin-bottom: 10%;
+}
+.skillbox>div{
+    transition: 0.5s;
+}
+.skillbox>div:hover{
+    opacity: 50%;
+}
+i{
+    font-size: 7rem;
+    margin: 30px;
+
+}
+
+.about{
+    padding-bottom: 90px;
 }
 @media screen and (max-width:800px) {
     .navbar{
